# postgresql_anonymizer

./: .codespellrc  .editorconfig  .gitignore  .gitlab-ci.yml  .mdstyle.rb  .pre-commit-config.yaml  .sqlfluff  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile96  INSTALL.md  LICENSE.md  META.json  Makefile  NEWS.md  NOTES.md  README.md  RELEASING.md  Vagrantfile  anon.c  anon.control  anon.sql  docker-compose.yml  identifiers_en_US.csv  mkdocs.yml  nfpm.template.yaml  pgxs.mk  rusfmt.toml
anon/: anon--0.0.1.sql
ci/: build_and_test_pgver.yml  coverage.yml  doc.yml  docker.yml  pg_dump_anon.yml  smoke_tests.yml
data/: README.md  address.csv  city.csv  companies.csv  company.csv  country.csv  email.csv  first_name.csv  iban.csv  identifier_en_US.csv  identifier_fr_FR.csv  last_name.csv  load.sql  lorem_ipsum.txt  siret.csv
debian/: changelog  control  rules
demo/: add_more_email.sql  anonymize.sql  blackbox.sh  declarative_masking.sql  declare_masking_rules.sql  dump.sql  generalization.sql  in_place_anonymization.sql  mask_schema.sql  masking.sql  noise_reduction_attack.sql  notice.sql  partial.sql  perf.sql  pseudonymization.sql  random.sql  rule.sql  scan.sql  shuffle.sql
docker/: Dockerfile  Dockerfile96  anon.sh  docker-compose.yml  dump.sh  init_anon.sh
docs/: .editorconfig  INSTALL.md  Makefile  NOTES.md  SECURITY.md  UPGRADE.md  anonymous_dumps.md  concepts.md  configure.md  custom_fake_data.md  datamodel.md  declare_masking_rules.md  detection.md  dynamic_masking.md  generalization.md  in_place_anonymization.md  index.md  legacy_dynamic_masking.md  (+8 more)
(+276 files in other folders)
