[package]
name = "anon"
version = "2.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg13"]
#pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
#pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
c_str_macro = "1.0.3"
chrono = "0.4.37"
fake = { version = "4.3.0", features = ["bigdecimal", "chrono", "http", "rust_decimal", "uuid", "time","random_color"] }
image = "0.25.5"
md-5 = "0.10.6"
paste = "1.0"
pgrx = "0.14.3"
rand = "0.8.5"
regex = "1.10.2"

[dev-dependencies]
pgrx-tests = "0.14.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
